--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "vue": "^3.2.16"
   },
   "devDependencies": {
+    "@types/node": "^16.11.7",
     "@vitejs/plugin-vue": "^1.9.3",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.3.11",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-nested": "^5.0.6",
+    "sass": "^1.43.4",
+    "tailwindcss": "^2.2.19",
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
     "vue-tsc": "^0.3.0"
