--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "pinia": "^2.0.2",
     "velocity-animate": "^2.0.6",
     "vue": "^3.2.16",
